[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/scripts/RequestTest.gd" type="Script" id=1]

[node name="RequestTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Initialize" type="Button" parent="."]
margin_left = 48.0
margin_top = 40.0
margin_right = 248.0
margin_bottom = 113.0
text = "Initialize mind"

[node name="Get" type="Button" parent="."]
margin_left = 48.0
margin_top = 160.0
margin_right = 248.0
margin_bottom = 233.0
text = "Get value"

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 306.0
margin_top = 43.0
margin_right = 954.0
margin_bottom = 83.0

[connection signal="request_completed" from="HTTPRequest" to="." method="request_completed"]
[connection signal="pressed" from="Initialize" to="." method="request_initialize"]
[connection signal="pressed" from="Get" to="." method="request_value"]
